--- a/src/App.css
+++ b/src/App.css
@@ -39,6 +39,7 @@
 
 
 
+
 li{
   list-style: none;
 }
@@ -47,6 +48,7 @@ li{
   width: 100%;
 display: flex;
 flex-direction: column;
+
 justify-content: center;
 position: sticky;
 top: 0px;
@@ -56,10 +58,11 @@ z-index: 9999;
 .header_top{
   background-color: black;
 color: #FFFFFF;
+display: flex;
+height: fit-content;
+
 
 }
-
-
 
 
 .header_top a{
@@ -86,6 +89,7 @@ color: #FFFFFF;
   width: 100%;
   color: inherit!important;
   
+  
  
 
 }
@@ -96,6 +100,18 @@ color: #FFFFFF;
   left: -100px;
   transition: background 0.3s, border 0.3s, border-radius 0.3s, box-shadow 0.3s;
  
+}
+
+@media(width<=992px){
+  
+.no-bg{
+  position: relative;
+}
+
+.first_drop{
+/* background-color: red; */
+}
+
 }
 
 .first_dropdown{
@@ -145,9 +161,91 @@ color: #FFFFFF;
   }
 }
 
-.nav-item:hover .dropdown-menu {
-  display: block;
+
+
+@media (width<=992px) {
+
+  /* .navbar-nav {
+    flex-direction: row;
+  }
+
+  .nav-dropdown {
+    position: absolute !important;
+    z-index: 1000;
+  } */
+  
+
+  .navbar_button{
+margin-left: 0!important;
+  };
+    .container, .container-md, .container-sm {
+        max-width: 100dvw!important;
+        padding: 0;
+        margin-left: 1rem;
+    }
+
+   .dropdown, .dropdown-center, .dropend, .dropstart, .dropup, .dropup-center {
+      position: relative;
+      width: 100%;
+      left: auto;
+      /* margin-bottom: 1rem; */
+  }
+  .nav-link{
+    padding-left: 1rem!important;
+
+    .nav-link{
+      padding-left: 0!important;
+    }
+  }  
+
+  .second_dropdown{
+    position: relative;
+  display: inline-block;
+float: none;
+
+  }
+
+  .nav-dropdown-item {
+    display: block; 
+    width: 100%; 
+  }
+
+  .second_dropdown_content{
+    position: absolute;
+    left: 0;
+    top:100%;
+   width: 100%;
+    display: none;
+    background-color: #ffffff;
+    color: black;
+    padding: 1rem;
+ 
+    z-index: 9999;
+    li{
+     padding: 5px;
+    }
+    li:hover{
+      color: #ff8c00;
+    }
+
+  }
+
+  .second_dropdown:hover{
+
+
+    .second_dropdown_content{
+      display: block;
+    }
+  }
+  
+
 }
+
+
+
+ .nav-item:hover .dropdown-menu {
+  display: block;
+} 
 
 .nav-item .dropdown-menu {
   display: none;
@@ -157,44 +255,13 @@ color: #FFFFFF;
   margin-top: -1px;
 }
 
-/* .nav_dropdown_item:hover > .dropdown-menu {
-  display: block;
-} */
-
-/* .nav-dropdown-item:focus,
-.nav-dropdown-item:hover,
-.nav-dropdown-item.active {
-  background-color: transparent!important; 
-  color: inherit !important; 
-} */
-
-
-/* .nav-dropdown-item {
-  background-color: transparent; 
-  color: inherit; 
-} */
-
-/* .nav-dropdown-item:focus,
-.nav-dropdown-item:hover,
-.nav-dropdown-item.active {
-  background-color: transparent; 
-  color: inherit; 
-} */
-
-
-/* .nav_dropdown_item .dropdown-item:active {
-  color: inherit!important; 
-  background-color: inherit !important; 
-  text-decoration: none; 
-} */
-
 
 .nav-dropdown-item {
-  background-color: transparent !important; /* Prevent blue background */
+  background-color: transparent !important; 
 }
 
 .nav-dropdown-item:focus, .nav-dropdown-item:hover {
-  background-color: transparent !important; /* Maintain transparency on hover */
+  background-color: transparent !important; 
 }
 
 
@@ -224,19 +291,20 @@ ul{
   position: absolute;
   background-color: #f9f9f9;
   min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);.n
   padding: 12px 16px;
   z-index: 1;
 } */
 
 
+.navbar-toggler-icon{
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba(255, 127, 80, 0.75)' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e")!important;
+}
 
 .logo{
-
   
   width: 130px;
-  height: 40px;
-  
+  height: 40px;  
 
   img {
     max-width: 100%;
@@ -252,10 +320,10 @@ ul{
 
 .navbar_button{
   
-  
+  padding-left: 0px!important;
   background-color: #ff8c00 !important;
   width: 130px;
- padding: 0 23px;
+ padding: 0 23px 0 23px;
   border-radius: 50px;
   text-align: center;
   color: white!important;
@@ -281,9 +349,7 @@ ul{
 
   p{
     font-size: 18px!important;
-  }
-
-  
+  }  
 
 }
 
@@ -296,13 +362,12 @@ ul{
     font-weight: 700;
   }
   p{
-    font-size: 15px;
+    font-size: 15px!important;
   }
 }
 
 
 }
-
 
 
 .hero_section_button{
