--- a/src/components/Features.css
+++ b/src/components/Features.css
@@ -22,7 +22,7 @@
   }
 
   .features_list{
-    width: 100dvw;
+    width: 97vw;
     display: flex;
     flex-direction: row;
     justify-content:space-evenly;
