--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,9 @@
   margin: 0 auto;
   padding: 0;
   font-family: "Roboto", Sans-serif; 
-  overflow-x: hidden;
+  /* overflow-x: hidden;
+ */
+ 
   
 }
 
@@ -50,7 +52,7 @@ display: flex;
 flex-direction: column;
 
 justify-content: center;
-position: sticky;
+position: sticky!important;
 top: 0px;
 z-index: 9999;
 }
@@ -165,15 +167,7 @@ height: fit-content;
 
 @media (width<=992px) {
 
-  /* .navbar-nav {
-    flex-direction: row;
-  }
-
-  .nav-dropdown {
-    position: absolute !important;
-    z-index: 1000;
-  } */
-  
+ 
 
   .navbar_button{
 margin-left: 0!important;
@@ -286,15 +280,7 @@ ul{
   display: inline-block;
 }
 
-/* .dropdown_content{
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);.n
-  padding: 12px 16px;
-  z-index: 1;
-} */
+
 
 
 .navbar-toggler-icon{
@@ -345,6 +331,7 @@ ul{
 
   h1{
     font-size: 60px;
+    font-weight: 600
   };
 
   p{
